<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri  </string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="no_text_recognized">No text recognized!</string>
    <string name="previewInfo">This is Preview Image View</string>
    <string name="resultInfo">This is Result Info\n</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="dignosis">Diagnosis</string>
    <string name="resultScore">Confidence Score</string>
    <string name="result_label">Indicated : %s</string>
    <string name="confidence_score">With Confidence Score: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_page">Home</string>
    <string name="title_diagnoses">Check your Picture</string>
    <string name="title_desc_home">Import photos from gallery\nThen analyze here</string>
    <string name="title_previewImage">This Show the Preview Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity">MainActivity</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_favorite">Favorite</string>
    <string name="content_desc_imgDetail">Image for Detail Activity</string>
    <string name="detail_eventName">Event Name</string>
    <string name="detail_ownerName">Owner Name</string>
    <string name="title_beginTime">Begin Time</string>
    <string name="detail_beginTime">Begin Time</string>
    <string name="title_endTime">End TIme</string>
    <string name="content_desc_icBeginTime">This is icon for begin time</string>
    <string name="content_desc_icEndTime">This is icon for end time</string>
    <string name="detail_endTime">End Time</string>
    <string name="title_description">Description</string>
    <string name="detail_description">Detail Description</string>
    <string name="title_remainingQuota">Remaining Quota</string>
    <string name="content_desc_icPerson">This is icon for remaining quota</string>
    <string name="detail_remainingQuota">Remaining Quota</string>
    <string name="registration">Registration</string>
    <string name="content_desc_fabFavorite">This is icon for fab favorite</string>
    <string name="title_headingHome">"Discover the Best\nEvent in Dicoding "</string>
    <string name="title_welcomeHome">Welcome to</string>
    <string name="hint_homeSearchBar">Search event here</string>
    <string name="title_banner">Lets Find\nThe Dicoding Event</string>
    <string name="title_HomeUpcoming">Explore Upcoming Event</string>
    <string name="title_seeMoreUpcoming">See More</string>
    <string name="title_dicoding">Dicoding Academy</string>
    <string name="img_banner">This is image for banner in home page</string>
    <string name="title_HomeFinished">Explore Finished Event</string>
    <string name="title_seeMoreFinished">See More</string>
    <string name="title_settings">Settings</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="title_enable_dark_mode">Enable Dark Mode</string>
    <string name="save_bookmark">Save Bookmark</string>
    <string name="info">No favorite events available</string>
    <string name="title_analyze">Analyze</string>
    <string name="title_TopHeadlines">top health headlines</string>
    <string name="desc_diagnose_results">Based on the image you uploaded\nThe analysis result of the image states that:\n</string>
    <string name="definition_cancer">Cancer is a disease characterized by the uncontrolled growth and spread of abnormal cells in the body. Normally, cells grow, divide, and die in an orderly manner. However, cancerous cells continue to grow and divide instead of dying, forming masses of tissue called tumors. These tumors can invade nearby tissues and may spread to other parts of the body through the bloodstream or lymphatic system, a process known as metastasis.\n\nThere are many types of cancer, each named after the organ or cell type where it begins, such as lung cancer, breast cancer, and skin cancer. Cancer can develop due to genetic factors, lifestyle choices (like smoking or diet), environmental exposures (such as radiation or certain chemicals), or infections. The disease is often treated with surgery, radiation therapy, chemotherapy, immunotherapy, or a combination of these methods, depending on the type and stage of cancer. Early detection and treatment are key to improving the chances of survival.</string>
    <string name="whatiscancer">What is Cancer</string>
    <string name="condesc_bookmarks_analyis">this is condesc_bookmarks_analyis</string>
    <string name="content_description_bookmarks">This is Content Description of Bookmarks in Result</string>
    <string name="content_description_homeImage">This is content description of image in home page</string>
    <string name="content_description_preview">This is content description of preview image in analyze page</string>
    <string name="title_name_headlines">Title Name</string>
    <string name="author_name_headlines">Author Name</string>
    <string name="content_description_bookmarks_article">This is content description of bookmarks in items articke</string>
    <string name="content_description_back">This is content description of back page</string>
    <string name="title_explore">Lets Explore More!</string>
    <string name="title_TopHeadline">Top US Headlines</string>
    <string name="history">History</string>
    <string name="title_history">History</string>
    <string name="title_health">Health news</string>
    <string name="tvDescHeadlines">Description</string>
</resources>