<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBarHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_page"
        android:textSize="25sp"
        android:fontFamily="@font/vinilatest_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="353dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

<!--                <TextView-->
<!--                    android:id="@+id/textView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:fontFamily="@font/vinilatest_condensedlight"-->
<!--                    android:text="@string/title_welcomeHome"-->
<!--                    android:textSize="15sp"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBoOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/vinilatest_condensed"
                    android:text="@string/title_explore"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
            <!--                    android:id="@+id/constraintLayout3"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="100dp"-->
            <!--                    android:layout_marginStart="20dp"-->
            <!--                    android:layout_marginTop="16dp"-->
            <!--                    android:layout_marginEnd="20dp"-->
            <!--                    android:layout_marginBottom="16dp"-->
            <!--                    android:background="@drawable/banner"-->
            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
            <!--                    app:layout_constraintStart_toStartOf="parent"-->
            <!--                    app:layout_constraintTop_toTopOf="parent">-->

            <!--                    <TextView-->
            <!--                        android:id="@+id/textView4"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_marginStart="15dp"-->
            <!--                        android:text="@string/title_banner"-->
            <!--                        android:textColor="@color/white"-->
            <!--                        android:textSize="22sp"-->
            <!--                        android:textStyle="bold"-->
            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                        app:layout_constraintStart_toStartOf="parent"-->
            <!--                        app:layout_constraintTop_toTopOf="parent" />-->

            <!--                    <ImageView-->
            <!--                        android:id="@+id/imageView"-->
            <!--                        android:layout_width="0dp"-->
            <!--                        android:layout_height="0dp"-->
            <!--                        android:layout_marginStart="200dp"-->
            <!--                        android:src="@drawable/me2"-->
            <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                        app:layout_constraintEnd_toEndOf="parent"-->
            <!--                        app:layout_constraintStart_toStartOf="parent"-->
            <!--                        app:layout_constraintTop_toTopOf="parent"-->
            <!--                        android:contentDescription="@string/img_banner" />-->

            <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->

            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/vinilatest_condensed"
                    android:text="@string/title_TopHeadline"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vinilatest_condensed"
                    android:text="@string/title_seeMoreUpcoming"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopHeadlines"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:paddingHorizontal="10dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>